# DataLib

./: .readthedocs.yaml  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: github-ci.yml
dataset/: dataset_traffic_accident.csv  fintech.csv
docs/source/: conf.py  index.rst
examples/: example_usage.py
src/datalib/: __init__.py  data_loader.py  data_stats.py  data_viz.py  ml_models.py
src/datalib.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_data_loader.py  test_data_stats.py
