[project]
name = "DataLib"
description = "A Python library for data manipulation, statistics, and machine learning."
readme = "README.md"
version="0.1.0"
requires-python = ">=3.10"
classifiers = ["Programming Language :: Python :: 3", "License :: OSI Approved :: MIT License", "Operating System :: OS Independent"]
dynamic = ["requires-python", "maintainers", "classifiers", "urls", "scripts", "dependencies", "optional-dependencies"]
authors = [{name = "Yosra OMRANE", email = "yosomran@gmail.com"}]
dependencies = [
    "numpy",
    "pandas",
    "matplotlib",
    "seaborn",
    "scikit-learn",
    "pytest",
    "twine",
    "sphinx"
]
[project.urls]
Homepage = "https://github.com/yosraomran/DataLib"
